# octotype

./: .committed.toml  .gitignore  Cargo.toml  LICENSE  README.md  REFACTORING_PLAN.md  SEPARATION_PLAN.md  cliff.toml  custom_mode.toml  custom_source.toml  demo.tape  flake.nix  justfile  pkgOctotype.nix  result
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: check.yml  flake-check.yml  release-binary.yml  release-docs.yml  release.yml  rust.yml  update-flake.yml  version-check.yml
assets/: demo.webm
config_test/modes/: Default.toml  Perfectionism.toml  WordRace.toml
config_test/sources/: brownfox.toml  number_words.toml
config_test/statistics/: session_1762180278.json
docs/: README.md  docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: Modes.md  Parameters.md  intro.md
docs/docs/cli/: intro.md
docs/docs/configuration/: index.md  modes.md  parameters.md  settings.md  sources.md
docs/docs/contributing/: bug.md  bug.mdx  index.md
docs/docs/contributing/development/: environment.md  index.md  project-structure.md  using-ai.md
docs/src/css/: custom.css
docs/src/pages/: index.tsx
gladius/: Cargo.toml  README.md  REFACTORING_ANALYSIS.md  REFACTORING_PHASES.md
gladius/benches/: math_benchmarks.rs  statistics_benchmarks.rs
gladius/diagrams/: architecture_overview.mmd  buffer_structure.mmd  input_handler_flow.mmd  rendering_pipeline.mmd  session_lifecycle.mmd  statistics_architecture.mmd
gladius/src/: buffer.rs  config.rs  input_handler.rs  lib.rs  math.rs  render.rs  session.rs  statistics.rs  statistics_tracker.rs  text.rs  text_buffer.rs
gladius/src/statistics/: math.rs
just/: build.just  run.just  test.just
misc/: octotype.desktop
modes/: README.md  default.toml  perfectionism.toml  wordcount.toml  wordrace.toml
octotype/: Cargo.toml
octotype/src/: app.rs  config.rs  page.rs  utils.rs
octotype/src/config/: mode.rs  parameters.rs  source.rs  stats.rs  theme.rs
octotype/src/page/: loadscreen.rs  menu.rs  session.rs  stats.rs
octotype/src/page/session/: mode.rs  stats.rs
sources/: README.md  brownfox.toml  number_words.toml  random.sh  random.toml
src/: app.rs  config.rs  error.rs  library.rs  main.rs  modes.rs  page.rs  session.rs  session_factory.rs  sources.rs  statistics.rs  text.rs  utils.rs
src/app/: error.rs  loadscreen.rs  menu.rs  mod.rs
src/app/menu/: mod.rs
src/app/menu/sources/: mod.rs  quote_api.rs  random_words.rs
src/app/session/: mod.rs  stats.rs  text.rs
src/config/: mode.rs  parameters.rs  source.rs  theme.rs
src/page/: error.rs  history.rs  loadscreen.rs  menu.rs  session.rs  stats.rs
src/page/session/: mode.rs  stats.rs  text.rs
src/session/: library.rs  mod.rs  stats.rs  text.rs
src/sources/: quote_api.rs
themes/: README.md  catpuccin-frappe.toml  catpuccin-latte.toml  catpuccin-macchiato.toml  catpuccin-mocha.toml
