[package]
name = "octotype"
version = "0.3.2"
edition = "2024"
authors = ["Mads Ahlquist Jensen <madsaj10@outlook.com>"]
description = "A typing trainer for your terminal"
repository = "https://github.com/mahlquistj/octotype"
license = "MIT"
readme = "README.md"
keywords = ["typing-trainer", "tui", "ratatui"]
categories = ["command-line-utilities"]
exclude = [
"assets/*", 
"octotype.wiki/*", 
".github/*", 
"flake.nix", 
"flake.lock",
"modes/*",
"sources/*",
"themes/*",
"docs/*"
]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
# Groups
perf = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[dependencies]
ratatui = { version = "0.29", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
figment = { version = "0.10", features = ["toml", "env"] }
strum = { version = "0.27", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "2.0", features = ["from", "deref", "deref_mut", "display"]}

terminal-colorsaurus = "1.0.0"
thiserror = "2.0"
crossterm = "0.29"
directories = "6.0"
toml = "0.9"
which = "8.0"
ansi_colours = "1.2.3"
