[package]
name = "octotype"
description = "A typing trainer for your terminal"
version = "0.4.2"
edition = "2024"
authors = ["Mads Ahlquist Jensen <madsaj10@outlook.com>"]
repository = "https://github.com/mahlquistj/octotype"
license = "MIT"
readme = "README.md"
keywords = ["typing-trainer", "tui", "ratatui"]
categories = ["command-line-utilities"]
exclude = [
"octotype.wiki/*", 
".github/*", 
"flake.nix", 
"flake.lock",
"modes/*",
"sources/*",
"themes/*",
"docs/*"
]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
# Groups
perf = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[dependencies]
gladius = { version = "0.4" }

ratatui = { version = "0.29", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
figment = { version = "0.10", features = ["toml", "env"] }
strum = { version = "0.27", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "2.0", features = ["from", "deref", "deref_mut", "display"]}

terminal-colorsaurus = "1.0.0"
thiserror = "2.0"
crossterm = "0.29"
directories = "6.0"
toml = "0.9"
which = "8.0"
ansi_colours = "1.2.3"
web-time = "1.1"
criterion = "0.7"
simple-mermaid = "0.2"
