[package]
name = "gladius"
description = "A library for writing typing-trainers"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./docs-header.html" ]

[dependencies]
web-time.workspace = true
simple-mermaid.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "math_benchmarks"
harness = false

[[bench]]
name = "statistics_benchmarks"
harness = false
