[package]
name = "octotype"
description = "A typing trainer for your terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
ratatui.workspace = true
serde.workspace = true
figment.workspace = true
strum.workspace = true
clap.workspace = true
derive_more.workspace = true

terminal-colorsaurus.workspace = true
thiserror.workspace = true
crossterm.workspace = true
directories.workspace = true
toml.workspace = true
which.workspace = true
ansi_colours.workspace = true
